fix: improve contrast with fg-subtle

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -39,7 +39,7 @@
 
   --fg: oklch(0.145 0 0);
   --fg-muted: oklch(0.439 0 0);
-  --fg-subtle: oklch(0.556 0 0);
+  --fg-subtle: oklch(0.52 0 0);
 
   --border: oklch(0.8514 0 0);
   --border-subtle: oklch(0.922 0 0);
